# performance-management

./: .gitignore  Makefile  README.md  REQUIREMENTS.md  bitbucket-pipelines.yml  build-and-push.sh  docker-compose.yml  performance_management_demo.db  release-version.sh
java-api/: .gitignore  Makefile  Performance_Management_API.postman_collection.json  README.md  pom.xml
pulse-agent-ai/: .dockerignore  Dockerfile  README.md  api.py  pyproject.toml  run-agent.sh
pulse-agent-ai/app/: __init__.py  auth.py  config.py  dependencies.py  main.py  middleware.py  models.py
pulse-agent-ai/app/routes/: chat.py  health.py  info.py  sessions.py
pulse-agent-ai/pulse_performance_agent/: __init__.py  agent-instructions.txt  agent.py
pulse-agent-ai/pulse_performance_agent/sub_agents/: __init__.py
pulse-agent-ai/pulse_performance_agent/sub_agents/performance_management_graphql_tool/: __init__.py  agent.py  graphql_agent_instructions.py
pulse-agent-ai/pulse_performance_agent/sub_agents/performance_management_graphql_tool/utils/: __init__.py  graphql_client.py  queries.py  tools.py
pulse-agent-ai/pulse_performance_agent/utils/: __init__.py  session_utils.py
pulse-helm-chart/: Chart.yaml  README.md  install-upgrade.sh  values-dev.yaml  values-example.yaml  values-release.yaml  values.yaml
pulse-java-api/: .dockerignore  Dockerfile  Makefile  README.md  pom.xml
pulse-mock-auth-api/: .gitignore  Dockerfile  README.md  api.py  pyproject.toml
pulse-react-ui/: index.html  package-lock.json  package.json  vite.config.ts
react-ui/: WIDGET_MODE.md  package-lock.json  (+3 more)
(+163 files in other folders)
