[project]
name = "pulse-performance-agent"
version = "0.1.0"
description = "Google ADK agent for Performance Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.20.0",
    "google-cloud-aiplatform>=1.129.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "asyncpg>=0.29.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]


